syntax = "proto3";
package emerald.vault;
import "crypto.proto";
import "common.proto";

message Seed {
    FileType file_type = 1;
    bytes id = 2;
    oneof seed_source {
        Encrypted bytes = 3;
        LedgerSeed ledger = 4;
    }
    // User assigned label (optional)
    string label = 5;
    // creation date of the seed, millis since epoch, in UTC
    uint64 created_at = 6;
}

message LedgerSeed {
    repeated HDPathFingerprint fingerprints = 1;
}

message HDPathFingerprint {
    // Field #1 reserved by HDPath, which was never used
    Type type = 2;
    bytes fingerprint = 3;

    enum Type {
        UNKNOWN = 0;
        PUBKEY_SHA256 = 1;
    }
}

message SeedHD {
    bytes seed_id = 1;
    oneof path_type {
        //full m/purpose'/coin'/account'/change/index
        HDPath path = 2;
        //short, only m/purpose'/coin'/account'
        HDPath account = 3;
    }
}

message HDPath {
    uint32 purpose = 1;
    uint32 coin = 2;
    uint32 account = 3;
    uint32 change = 4;
    uint32 index = 5;
}
